tests/ui/reborrow/reborrow-no-lifetime-rejected.stderr
error: implementing `Reborrow` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/reborrow-no-lifetime-rejected.rs:8:1
   |
LL | impl<'a> Reborrow for Thing {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

